# Adenoma

./: .gitignore  README.md  SCOPE.md  SSA_CPATHAGENT_PROGRESS_REPORT.md  pyproject.toml  requirements.txt
artifacts/: README.md
configs/: baselines.yaml  budget.yaml  metrics.yaml  runtime.yaml  task_matrix.yaml
scripts/: build_pilot.sh  eval_run.sh  replay_case.sh  run_batch.sh  run_smoke.sh  run_tests.sh
src/adenoma_agent/: cache.py  cli.py  config.py  eval.py  logger.py  multimodal.py  orchestrator.py  replay.py  schemas.py  utils.py
src/adenoma_agent/adapters/: __init__.py  clam_coords.py  cropper.py  manifest.py  patch_export.py  route_c.py
src/adenoma_agent/agents/: __init__.py  audit.py  navigate.py  observe_reason.py  trace.py
src/adenoma_agent/helpers/: export_navigation_crops.py
tests/: test_coordinates.py  test_manifest.py  test_orchestrator.py  test_replay_eval.py
